audio visualization works

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <button data-playing="false" role="switch" aria-checked="false">
         <span>Play/Pause</span>
     </button>
+    <canvas class="visualizer" width="640" height="100"></canvas> 
 </body>
 </html>
 
