integrating audio part 1

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html><html><head><meta charset="utf-8"><title>COS 426 Final Project - Audiophile</title><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="favicon.ico"></head>
 <body>
     <audio id="audio-mp3" style="display: none;"></audio>
-    <button data-playing="false" role="switch" aria-checked="false" style="display: none;">
+    <button data-playing="false" role="switch" aria-checked="false" >
         <span>Play/Pause</span>
     </button>
     <canvas class="visualizer" width="640" height="100" style="display: none;"></canvas> 
