--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,66 @@
-<!doctype html><html><head><meta charset="utf-8"><title>COS 426 Final Project - Audiophile</title><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="shortcut icon" href="favicon.ico"></head>
+<!doctype html><html>
+    <head>
+        <meta charset="utf-8">
+        <title>COS 426 Final Project - Audiophile</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="shortcut icon" href="favicon.ico">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&display=swap');
+
+            #intro-container {
+                position: fixed;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                /* background-color: #000; */
+            }
+
+            h1 {
+                font-family: "Inconsolata", monospace;
+                font-size: 5em;
+                color: #fff;
+                margin: 0 0 30px;
+            }
+
+            p {
+                width: 60%;
+                font-family: "Inconsolata", monospace;
+                font-size: 1.5em;
+                color: #fff;
+                margin: 0 0 10px;
+            }
+
+            #start-btn {
+                width: 200px;
+                height: 40px;
+                margin: 0 auto;
+                font-weight: bold;
+                font-size: 20px;
+                background-color: #fff;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer
+            }
+
+        </style>
+    </head>
 <body>
     <audio id="audio-mp3" style="display: none;"></audio>
-    
-    <button data-playing="false" role="switch" aria-checked="false" >
-        <span>Play/Pause</span>
-    </button>
+
+    <div id="intro-container">
+        <h1>Stay On Track</h1>
+        <p>In this endless runner game, you are navigating a ball through a zigzag maze to the beat of your favorite tune. </p>
+        <br/>
+        <p>
+        Use the arrow keys to move: Left and Right to change directions, and Up to jump. Whatever you do, make sure to stay on track!
+        </p>
+        <button id="start-btn" data-playing="false" role="switch" aria-checked="false" >
+            <span>Play</span>
+        </button>
+    </div>
     <div class="UIBox2" id="displayscore">
         <div class="content">
             <div id="score">
