--- a/src/index.html
+++ b/src/index.html
@@ -36,13 +36,45 @@
             #start-btn {
                 width: 200px;
                 height: 40px;
-                margin: 0 auto;
+                margin: 20px auto 0;
                 font-weight: bold;
                 font-size: 20px;
                 background-color: #fff;
                 border: none;
                 border-radius: 5px;
                 cursor: pointer
+            }
+
+            #reset-btn {
+                width: 200px;
+                height: 40px;
+                margin: 20px auto 0;
+                font-weight: bold;
+                font-size: 20px;
+                background-color: #fff;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer
+            }
+
+            #score {
+                position: fixed;
+                top: 20px;
+                left: 20px;
+                font-family: "Inconsolata", monospace;
+                font-size: 1.5em;
+                color: #fff;
+            }
+
+            #ending-screen {
+                display: none;
+                position: fixed;
+                width: 100%;
+                height: 100%;
+                /* display: flex; */
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
             }
 
         </style>
@@ -61,13 +93,11 @@
             <span>Play</span>
         </button>
     </div>
-    <div class="UIBox2" id="displayscore">
-        <div class="content">
-            <div id="score">
-                <!-- SCORE<br>0 -->
-            </div>
-        </div>
+    <div id="score"></div>
+    
+    <div id="ending-screen">
+        <div style="height: 60px"></div>
+        <button id="reset-btn">Play Again</button>
     </div>
-    <canvas class="visualizer" width="640" height="100" style="display: none;"></canvas> 
 </body>
 </html>
