--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html><html>
     <head>
         <meta charset="utf-8">
-        <title>COS 426 Final Project - Audiophile</title>
+        <title>COS 426 Final Project - Stay On Track</title>
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="shortcut icon" href="favicon.ico">
         <style>
